Fixing Titles and Particle Z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,7 @@ form {
 
 
 .particle{
+    z-index: -1;
     position: fixed;
     top: 50%;
     left: 50%;
